add jwt authentication for users

--- a/MvcApiCall/Views/Home/Index.cshtml
+++ b/MvcApiCall/Views/Home/Index.cshtml
@@ -1,29 +1,3 @@
-﻿<h1>All Pets:</h1>
+﻿<h1>Epicodus Pets</h1>
 
-<ol>
-@foreach (Pet pet in Model)
-{
-    <div class="row">
-        <div class="col-md-4">
-            <img src='http://localhost:5000/api/Pets/@pet.PetId/photo' width="350">
-        </div>
-        <div class="col-md-8">
-            <ul>
-                <li>Name: @pet.Name</li>
-                <li>Species: @pet.Species</li>
-                <li>Breed: @pet.Breed</li>
-                <li>Age: @pet.Age</li>
-                <li>Gender: @pet.Gender</li>
-                <li>Description: @pet.Description</li>
-                <li>Favorite Things: @pet.FavoriteThings</li>
-                <li>Least Favorite Things: @pet.LeastFavoriteThings</li>
-                <li>Owner: @pet.Owner</li>
-                
-                
-            </ul>
-            <br>
-        </div>
-
-    </div>
-}
-</ol>
+<a href="/pets">See all the Epicodus Pets</a>
