--- a/MvcApiCall/wwwroot/css/site.css
+++ b/MvcApiCall/wwwroot/css/site.css
@@ -54,3 +54,8 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.card {
+  border: solid black 5px;
+  margin: 10px 0px 10px 0px;
+}
